src/Grammaire.java
/* Generated By:JavaCC: Do not edit this line. Grammaire.java */
import java.io.*;
import ast.*;
import java.util.Stack;
import java.util.ArrayList;
import java.util.List;
import java.lang.Math;
import java.util.Random;

public class Grammaire implements GrammaireConstants {
  static Stack stack = new Stack();
  static int uniqueID = 0;

  public static void main(String args []) throws ParseException
  {
    try {
            InputStream inputStream = new FileInputStream(new File("test.txt"));
            Grammaire parser = new Grammaire(inputStream);

            parser.function();

                Function myFunction = (Function)stack.peek();








         } catch(IOException exception) {
                exception.printStackTrace();
         }
  }

  final public void function() throws ParseException {
  Token ident = null;
  Token f_type = null;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case INTEGER_TYPE:
    case DECIMAL_TYPE:
    case BOOLEAN:
      f_type = type();
      break;
    case VOID:
      f_type = jj_consume_token(VOID);
      break;
    default:
      jj_la1[0] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
    ident = jj_consume_token(IDENTIFIER);
          Function func = new Function(f_type.toString() , ident.toString());
          stack.push(func);
    jj_consume_token(42);
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case INTEGER_TYPE:
    case DECIMAL_TYPE:
    case BOOLEAN:
      parameter_declaration();
      label_1:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case 43:
          ;
          break;
        default:
          jj_la1[1] = jj_gen;
          break label_1;
        }
        jj_consume_token(43);
        parameter_declaration();
      }
      break;
    default:
      jj_la1[2] = jj_gen;
      ;
    }
    jj_consume_token(44);
    jj_consume_token(45);
    function_body();
    jj_consume_token(46);
                FunctionBody funcB = (FunctionBody)stack.pop();
                func.setFunctionBody(funcB);

                /*
		Boolean ok = false;
		while(!ok){
        	BufferedReader reader = new BufferedReader(new InputStreamReader(System.in)); 

         	System.out.println("Voulez-vous afficher l'AST ? (o/n)");
        	String answer = reader.readLine(); 

			ok = answer == "o" || answer == "n";
			if(!ok) {
				System.out.prinln("Entrée invalide");
			}
		}
		
		if(answer == "o") {
			func.accept(new VisitorPrint(), 0);
		}*/




                DataGenerator dG = new DataGenerator(func);
                ArrayList<Execution> executions = dG.GenerateData();

                int nbWorked = 0;

                for(Execution e : executions) {
                        Context context = dG.GenerateContext(e);

                        Object result = func.interpret(context);

                        if(!context.getHasError()) {
                                nbWorked ++;
                        }

                        int allo = 100;
                }
    label_2:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case INTEGER_TYPE:
      case DECIMAL_TYPE:
      case BOOLEAN:
      case VOID:
        ;
        break;
      default:
        jj_la1[3] = jj_gen;
        break label_2;
      }
      function();
    }
    jj_consume_token(0);
  }

  final public void parameter_declaration() throws ParseException {
    Token ident = null;
    Token type = null;
                ParameterDeclaration parameterDeclaration = new ParameterDeclaration();
    type = type();
    ident = jj_consume_token(IDENTIFIER);
                parameterDeclaration.setParameterName(ident.toString());
                parameterDeclaration.setType(type.toString());

                Function func = (Function)stack.peek();
                List<ParameterDeclaration> parameterDeclarations = func.getParameterDeclarations();
                parameterDeclarations.add(parameterDeclaration);
                func.setParameterDeclarations(parameterDeclarations);
  }

  final public void function_body() throws ParseException {
            FunctionBody functionBody = new FunctionBody();
                ArrayList<VariableDeclaration> variableDeclarations = new ArrayList<VariableDeclaration>();
                ArrayList<Statement> statements = new ArrayList<Statement>();
    label_3:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case INTEGER_TYPE:
      case DECIMAL_TYPE:
      case BOOLEAN:
        ;
        break;
      default:
        jj_la1[4] = jj_gen;
        break label_3;
      }
      variable_declaration();
      jj_consume_token(47);
                VariableDeclaration varD = (VariableDeclaration)stack.pop();
                variableDeclarations.add(varD);
    }
    label_4:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case IF:
      case WHILE:
      case FOR:
      case IDENTIFIER:
        ;
        break;
      default:
        jj_la1[5] = jj_gen;
        break label_4;
      }
      statement();
                Statement statement = (Statement)stack.pop();
                statements.add(statement);
    }
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case RETURN:
      return_statement();
                ReturnStatement rStatement = (ReturnStatement)stack.pop();
                statements.add(rStatement);
      break;
    default:
      jj_la1[6] = jj_gen;
      ;
    }
                functionBody.setVariableDeclarations(variableDeclarations);
                functionBody.setStatements(statements);
                stack.push(functionBody);
  }

  final public void statement() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case IDENTIFIER:
      if (jj_2_1(2)) {
        assignment();
      } else {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case IDENTIFIER:
          function_call();
          break;
        default:
          jj_la1[7] = jj_gen;
          jj_consume_token(-1);
          throw new ParseException();
        }
      }
      jj_consume_token(47);
      break;
    case IF:
      conditional_statement();
      break;
    case WHILE:
      while_loop();
      break;
    case FOR:
      for_loop();
      break;
    default:
      jj_la1[8] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

  final public void variable_declaration() throws ParseException {
  Token t = null;
                VariableDeclaration variableDeclaration = new VariableDeclaration();

                ArrayList<Assignment> assignments = new ArrayList<Assignment>();
    t = type();
    assignment();
                Assignment assignment = (Assignment)stack.pop();
                assignments.add(assignment);
    label_5:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case 43:
        ;
        break;
      default:
        jj_la1[9] = jj_gen;
        break label_5;
      }
      jj_consume_token(43);
      assignment();
                assignment = (Assignment)stack.pop();
                assignments.add(assignment);
    }
                variableDeclaration.setAssignments(assignments);
                variableDeclaration.setType(t.toString());

                stack.push(variableDeclaration);
  }

  final public Token litteral_value() throws ParseException {
  Token t = null;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case INTEGER:
      t = jj_consume_token(INTEGER);
      break;
    case DECIMAL:
      t = jj_consume_token(DECIMAL);
      break;
    case TRUE:
    case FALSE:
      t = boolean_value();
      break;
    default:
      jj_la1[10] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
                          {if (true) return t;}
    throw new Error("Missing return statement in function");
  }

  final public Token boolean_value() throws ParseException {
  Token t = null;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case TRUE:
      t = jj_consume_token(TRUE);
      break;
    case FALSE:
      t = jj_consume_token(FALSE);
      break;
    default:
      jj_la1[11] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
                {if (true) return t;}
    throw new Error("Missing return statement in function");
  }

  final public Token type() throws ParseException {
  Token tok=null;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case INTEGER_TYPE:
      tok = jj_consume_token(INTEGER_TYPE);
      break;
    case DECIMAL_TYPE:
      tok = jj_consume_token(DECIMAL_TYPE);
      break;
    case BOOLEAN:
      tok = jj_consume_token(BOOLEAN);
      break;
    default:
      jj_la1[12] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
          {if (true) return tok;}
    throw new Error("Missing return statement in function");
  }

  final public void conditional_statement() throws ParseException {
        ConditionalStatement cStatement = new ConditionalStatement();
        ArrayList<Statement> ifBody = new ArrayList<Statement>();
        ArrayList<Statement> elseBody = new ArrayList<Statement>();
    jj_consume_token(IF);
    jj_consume_token(42);
    expression();
    jj_consume_token(44);
                Item exp = (Item)stack.pop();
                cStatement.setExpression(exp);
    jj_consume_token(45);
    label_6:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case IF:
      case WHILE:
      case FOR:
      case IDENTIFIER:
        ;
        break;
      default:
        jj_la1[13] = jj_gen;
        break label_6;
      }
      statement();
                          Statement statement = (Statement)stack.pop();
                          ifBody.add(statement);
    }
    if (jj_2_2(2)) {
      jj_consume_token(46);
      jj_consume_token(ELSE);
      jj_consume_token(45);
      label_7:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case IF:
        case WHILE:
        case FOR:
        case IDENTIFIER:
          ;
          break;
        default:
          jj_la1[14] = jj_gen;
          break label_7;
        }
        statement();
                        Statement statement = (Statement)stack.pop();
                        elseBody.add(statement);
      }
    } else {
      ;
    }
    jj_consume_token(46);
                cStatement.setIfBody(ifBody);
                cStatement.setElseBody(elseBody);
                stack.push(cStatement);
  }

  final public void while_loop() throws ParseException {
        WhileLoop whileLoop = new WhileLoop();
        Item item;
        ArrayList<Statement> body = new ArrayList<Statement>();
    jj_consume_token(WHILE);
    jj_consume_token(42);
    expression();
    jj_consume_token(44);
                item = (Item)stack.pop();
                whileLoop.setExpression(item);
    jj_consume_token(45);
    label_8:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case IF:
      case WHILE:
      case FOR:
      case IDENTIFIER:
        ;
        break;
      default:
        jj_la1[15] = jj_gen;
        break label_8;
      }
      statement();
                                Statement statement = (Statement)stack.pop();
                                body.add(statement);
    }
    jj_consume_token(46);
                whileLoop.setBody(body);
                stack.push(whileLoop);
  }

  final public void for_loop() throws ParseException {
        ForLoop forLoop = new ForLoop();
        ArrayList<Statement> body = new ArrayList<Statement>();
    jj_consume_token(FOR);
    jj_consume_token(42);
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case IDENTIFIER:
      assignment();
                forLoop.setStartAssignment((Assignment)stack.pop());
      break;
    default:
      jj_la1[16] = jj_gen;
      ;
    }
    jj_consume_token(47);
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case NOT:
    case PREFIX_INCREMENT:
    case PREFIX_DECREMENT:
    case TRUE:
    case FALSE:
    case INTEGER:
    case DECIMAL:
    case IDENTIFIER:
    case 42:
      expression();
                forLoop.setExpression((Item)stack.pop());
      break;
    default:
      jj_la1[17] = jj_gen;
      ;
    }
    jj_consume_token(47);
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case IDENTIFIER:
      assignment();
                forLoop.setIterationAssignment((Assignment)stack.pop());
      break;
    default:
      jj_la1[18] = jj_gen;
      ;
    }
    jj_consume_token(44);
    jj_consume_token(45);
    label_9:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case IF:
      case WHILE:
      case FOR:
      case IDENTIFIER:
        ;
        break;
      default:
        jj_la1[19] = jj_gen;
        break label_9;
      }
      statement();
                body.add((Statement)stack.pop());
    }
    jj_consume_token(46);
                forLoop.setBody(body);
                stack.push(forLoop);
  }

  final public void expression() throws ParseException {
        LogExpression lExp = new LogExpression();
        String connector;
        Item exp;
    comparaison_expression();
    label_10:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case AND:
      case OR:
        ;
        break;
      default:
        jj_la1[20] = jj_gen;
        break label_10;
      }
                   exp = (Item)stack.pop();
                   lExp.setGauche(exp);
      connector = logical_connector();
                        lExp.setConnector(connector);
      comparaison_expression();
                        exp = (Item)stack.pop();
                        lExp.setDroite(exp);
                        stack.push(lExp);
    }
  }

  final public void comparaison_expression() throws ParseException {
        ComparaisonExpression cExpression = new ComparaisonExpression();
        String operator;
    arithmetic_expression_priority_low();
    label_11:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case EQUAL:
      case NOT_EQUAL:
      case GREATER:
      case GREATER_OR_EQUAL:
      case LOWER:
      case LOWER_OR_EQUAL:
        ;
        break;
      default:
        jj_la1[21] = jj_gen;
        break label_11;
      }
                    Item expGauche = (Item)stack.pop();
                        cExpression.setGauche(expGauche);
      operator = comparaison_operator();
                cExpression.setOperator(operator);
      arithmetic_expression_priority_low();
                        Item expDroite = (Item)stack.pop();
                        cExpression.setDroite(expDroite);
                        stack.push(cExpression);
    }
  }

  final public void arithmetic_expression_priority_low() throws ParseException {
        String operator;
    arithmetic_expression();
    label_12:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case PLUS:
      case MINUS:
        ;
        break;
      default:
        jj_la1[22] = jj_gen;
        break label_12;
      }
                        LowPriorityArithmeticExpression lowExpression = new LowPriorityArithmeticExpression ();
                        Item expression = (Item)stack.pop();
                        lowExpression.setGauche(expression);
      operator = arithmetic_operation_priority_low();
      arithmetic_expression();
                        expression = (Item)stack.pop();
                        lowExpression.setDroite(expression);
                        lowExpression.setOperator(operator);

                        stack.push(lowExpression);
    }
  }

  final public void arithmetic_expression() throws ParseException {
        String operator;
    unary_expression();
    label_13:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case MULTIPLY:
      case DIVIDE:
      case MODULO:
        ;
        break;
      default:
        jj_la1[23] = jj_gen;
        break label_13;
      }
                        ArithmeticExpression aExpression = new ArithmeticExpression ();
                        UnaryExpression uExpression = (UnaryExpression)stack.pop();
                        aExpression.setGauche(uExpression);
      operator = arithmetic_operation();
      unary_expression();
                        uExpression = (UnaryExpression)stack.pop();
                        aExpression.setDroite(uExpression);

                        aExpression.setOperator(operator);
                        stack.push(aExpression);
    }
  }

  final public void unary_expression() throws ParseException {
        UnaryExpression uExpression = null;
        String operator;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case NOT:
    case PREFIX_INCREMENT:
    case PREFIX_DECREMENT:
      operator = unary_operator();
                uExpression = new UnaryExpression();
                uExpression.setOperator(operator);
      break;
    default:
      jj_la1[24] = jj_gen;
      ;
    }
    term();
                if(uExpression != null)
                {
                Term t = (Term)stack.pop();
                uExpression.setTerm(t);
                stack.push(uExpression);
                }
  }

  final public void term() throws ParseException {
        Term myTerm = new Term ();
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case TRUE:
    case FALSE:
    case INTEGER:
    case DECIMAL:
    case IDENTIFIER:
      value();
      break;
    case 42:
      jj_consume_token(42);
      expression();
      jj_consume_token(44);
      break;
    default:
      jj_la1[25] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
                Object val = (Object)stack.pop();
                myTerm.setValue(val);
                stack.push(myTerm);
  }

  final public String unary_operator() throws ParseException {
  Token t = null;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case PREFIX_INCREMENT:
      t = jj_consume_token(PREFIX_INCREMENT);
      break;
    case PREFIX_DECREMENT:
      t = jj_consume_token(PREFIX_DECREMENT);
      break;
    case NOT:
      t = jj_consume_token(NOT);
      break;
    default:
      jj_la1[26] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
                {if (true) return t.toString();}
    throw new Error("Missing return statement in function");
  }

  final public void value() throws ParseException {
  Token t = null ;
    if (jj_2_3(2)) {
      function_call();
    } else {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case IDENTIFIER:
        t = jj_consume_token(IDENTIFIER);
                         stack.push(t.toString());
        break;
      case TRUE:
      case FALSE:
      case INTEGER:
      case DECIMAL:
        t = litteral_value();
                         stack.push(t.toString());
        break;
      default:
        jj_la1[27] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    }
  }

  final public String arithmetic_operation() throws ParseException {
  Token t = null;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case MULTIPLY:
      t = jj_consume_token(MULTIPLY);
      break;
    case DIVIDE:
      t = jj_consume_token(DIVIDE);
      break;
    case MODULO:
      t = jj_consume_token(MODULO);
      break;
    default:
      jj_la1[28] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
                {if (true) return t.toString();}
    throw new Error("Missing return statement in function");
  }

  final public String arithmetic_operation_priority_low() throws ParseException {
    Token t = null;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case PLUS:
      t = jj_consume_token(PLUS);
      break;
    case MINUS:
      t = jj_consume_token(MINUS);
      break;
    default:
      jj_la1[29] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
                {if (true) return t.toString();}
    throw new Error("Missing return statement in function");
  }
